<?xml version="1.0"?>
<package format="3">
  <name>radar_sam</name>
  <version>1.0.0</version>
  <description>Lidar Odometry</description>
  <maintainer email="shant@mit.edu">GPAL</maintainer>
  <license>TODO</license>
  <author>GPAL</author>


  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend> rclcpp</build_depend>
  <exec_depend> rclcpp</exec_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>
  <depend>gpal_msgs</depend>
  <depend>radar_msgs</depend>
  <depend>gpal_vision_msgs</depend>
  <build_depend>tf</build_depend>
  <exec_depend>tf</exec_depend>
  <!-- <build_depend>tf2</build_depend>
  <exec_depend>tf2</exec_depend> -->


  <build_depend>cv_bridge</build_depend>
  <exec_depend>cv_bridge</exec_depend>

  <build_depend>pcl_conversions</build_depend>
  <exec_depend>pcl_conversions</exec_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <build_depend>nav_msgs</build_depend>
  <exec_depend>nav_msgs</exec_depend>
  <build_depend>visualization_msgs</build_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_generation</exec_depend>
  <build_depend>message_runtime</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>GTSAM</build_depend>
  <exec_depend>GTSAM</exec_depend>

  <build_depend>ndt_omp</build_depend>
  <exec_depend>ndt_omp</exec_depend>
  
  <build_depend>jsk_rviz_plugins</build_depend>
  <exec_depend>jsk_rviz_plugins</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
